crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__operator_precedence_keywords__precedence_and_before_or.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/operator_precedence_keywords.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Or
        left:
          Literal:
            - Bool: false
            - start: 0
              end: 5
              file: "<input>"
        right:
          Binary:
            op: And
            left:
              Literal:
                - Bool: true
                - start: 9
                  end: 13
                  file: "<input>"
            right:
              Literal:
                - Bool: false
                - start: 17
                  end: 22
                  file: "<input>"
            span:
              start: 9
              end: 22
              file: "<input>"
        span:
          start: 0
          end: 22
          file: "<input>"
    span:
      start: 0
      end: 23
      file: "<input>"
