crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__operator_precedence_keywords__precedence_array_index_in_arithmetic.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/operator_precedence_keywords.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Add
        left:
          Index:
            target:
              Identifier:
                name: arr
                span:
                  start: 0
                  end: 3
                  file: "<input>"
            index:
              Single:
                Literal:
                  - Number: 0
                  - start: 4
                    end: 5
                    file: "<input>"
            span:
              start: 0
              end: 6
              file: "<input>"
        right:
          Binary:
            op: Mul
            left:
              Literal:
                - Number: 2
                - start: 9
                  end: 10
                  file: "<input>"
            right:
              Literal:
                - Number: 3
                - start: 13
                  end: 14
                  file: "<input>"
            span:
              start: 9
              end: 14
              file: "<input>"
        span:
          start: 0
          end: 14
          file: "<input>"
    span:
      start: 0
      end: 15
      file: "<input>"
