crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__operator_precedence_keywords__precedence_comparison_over_or.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/operator_precedence_keywords.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Or
        left:
          Binary:
            op: Eq
            left:
              Literal:
                - Number: 1
                - start: 0
                  end: 1
                  file: "<input>"
            right:
              Literal:
                - Number: 1
                - start: 5
                  end: 6
                  file: "<input>"
            span:
              start: 0
              end: 6
              file: "<input>"
        right:
          Binary:
            op: Ne
            left:
              Literal:
                - Number: 2
                - start: 10
                  end: 11
                  file: "<input>"
            right:
              Literal:
                - Number: 2
                - start: 15
                  end: 16
                  file: "<input>"
            span:
              start: 10
              end: 16
              file: "<input>"
        span:
          start: 0
          end: 16
          file: "<input>"
    span:
      start: 0
      end: 17
      file: "<input>"
