crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__operator_precedence_keywords__precedence_complex_comparison.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/operator_precedence_keywords.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: And
        left:
          Binary:
            op: Lt
            left:
              Binary:
                op: Add
                left:
                  Literal:
                    - Number: 1
                    - start: 0
                      end: 1
                      file: "<input>"
                right:
                  Literal:
                    - Number: 2
                    - start: 4
                      end: 5
                      file: "<input>"
                span:
                  start: 0
                  end: 5
                  file: "<input>"
            right:
              Literal:
                - Number: 5
                - start: 8
                  end: 9
                  file: "<input>"
            span:
              start: 0
              end: 9
              file: "<input>"
        right:
          Binary:
            op: Eq
            left:
              Binary:
                op: Div
                left:
                  Literal:
                    - Number: 10
                    - start: 13
                      end: 15
                      file: "<input>"
                right:
                  Literal:
                    - Number: 2
                    - start: 18
                      end: 19
                      file: "<input>"
                span:
                  start: 13
                  end: 19
                  file: "<input>"
            right:
              Literal:
                - Number: 5
                - start: 23
                  end: 24
                  file: "<input>"
            span:
              start: 13
              end: 24
              file: "<input>"
        span:
          start: 0
          end: 24
          file: "<input>"
    span:
      start: 0
      end: 25
      file: "<input>"
