crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__operator_precedence_keywords__precedence_complex_logical.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/operator_precedence_keywords.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Or
        left:
          Binary:
            op: And
            left:
              Literal:
                - Bool: true
                - start: 0
                  end: 4
                  file: "<input>"
            right:
              Literal:
                - Bool: false
                - start: 8
                  end: 13
                  file: "<input>"
            span:
              start: 0
              end: 13
              file: "<input>"
        right:
          Unary:
            op: Not
            expr:
              Literal:
                - Bool: true
                - start: 18
                  end: 22
                  file: "<input>"
            span:
              start: 17
              end: 22
              file: "<input>"
        span:
          start: 0
          end: 22
          file: "<input>"
    span:
      start: 0
      end: 23
      file: "<input>"
