crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__operator_precedence_keywords__precedence_div_over_sub.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/operator_precedence_keywords.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Sub
        left:
          Literal:
            - Number: 10
            - start: 0
              end: 2
              file: "<input>"
        right:
          Binary:
            op: Div
            left:
              Literal:
                - Number: 6
                - start: 5
                  end: 6
                  file: "<input>"
            right:
              Literal:
                - Number: 2
                - start: 9
                  end: 10
                  file: "<input>"
            span:
              start: 5
              end: 10
              file: "<input>"
        span:
          start: 0
          end: 10
          file: "<input>"
    span:
      start: 0
      end: 11
      file: "<input>"
