crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__operator_precedence_keywords__precedence_div_over_sub_complex.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/operator_precedence_keywords.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Sub
        left:
          Binary:
            op: Sub
            left:
              Literal:
                - Number: 20
                - start: 0
                  end: 2
                  file: "<input>"
            right:
              Binary:
                op: Div
                left:
                  Literal:
                    - Number: 10
                    - start: 5
                      end: 7
                      file: "<input>"
                right:
                  Literal:
                    - Number: 2
                    - start: 10
                      end: 11
                      file: "<input>"
                span:
                  start: 5
                  end: 11
                  file: "<input>"
            span:
              start: 0
              end: 11
              file: "<input>"
        right:
          Literal:
            - Number: 3
            - start: 14
              end: 15
              file: "<input>"
        span:
          start: 0
          end: 15
          file: "<input>"
    span:
      start: 0
      end: 16
      file: "<input>"
