crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__operator_precedence_keywords__precedence_func_call_in_arithmetic.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/operator_precedence_keywords.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Add
        left:
          Call:
            callee:
              Identifier:
                name: foo
                span:
                  start: 0
                  end: 3
                  file: "<input>"
            args: []
            span:
              start: 0
              end: 5
              file: "<input>"
        right:
          Binary:
            op: Mul
            left:
              Literal:
                - Number: 2
                - start: 8
                  end: 9
                  file: "<input>"
            right:
              Literal:
                - Number: 3
                - start: 12
                  end: 13
                  file: "<input>"
            span:
              start: 8
              end: 13
              file: "<input>"
        span:
          start: 0
          end: 13
          file: "<input>"
    span:
      start: 0
      end: 14
      file: "<input>"
