crates/atlas-runtime/tests/frontend_syntax/snapshots/frontend_syntax__operator_precedence_keywords__precedence_func_call_in_comparison.snap
---
source: crates/atlas-runtime/tests/frontend_syntax/operator_precedence_keywords.rs
assertion_line: 41
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: And
        left:
          Binary:
            op: Lt
            left:
              Call:
                callee:
                  Identifier:
                    name: bar
                    span:
                      start: 0
                      end: 3
                      file: "<input>"
                args: []
                type_args: []
                span:
                  start: 0
                  end: 5
                  file: "<input>"
            right:
              Literal:
                - Number: 5
                - start: 8
                  end: 9
                  file: "<input>"
            span:
              start: 0
              end: 9
              file: "<input>"
        right:
          Binary:
            op: Gt
            left:
              Call:
                callee:
                  Identifier:
                    name: baz
                    span:
                      start: 13
                      end: 16
                      file: "<input>"
                args: []
                type_args: []
                span:
                  start: 13
                  end: 18
                  file: "<input>"
            right:
              Literal:
                - Number: 0
                - start: 21
                  end: 22
                  file: "<input>"
            span:
              start: 13
              end: 22
              file: "<input>"
        span:
          start: 0
          end: 22
          file: "<input>"
    span:
      start: 0
      end: 23
      file: "<input>"
